--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,13 @@
     display: block;
 }
 
+/* --- ИЗМЕНЕНИЕ: Крестик становится красным --- */
+.add-to-my-apps-btn.is-added .cross-icon,
+#add-to-my-apps-app-view-btn.remove-style .cross-icon {
+    filter: invert(34%) sepia(90%) saturate(2500%) hue-rotate(345deg) brightness(95%) contrast(90%);
+}
+
+
 /* --- Стили для кнопки внутри приложения --- */
 #add-to-my-apps-app-view-btn .cross-icon { display: none; }
 #add-to-my-apps-app-view-btn .plus-icon { display: inline-block; }
