--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*39 Убираем полосу прокрутки во время загрузки */
+/*38 Убираем полосу прокрутки во время загрузки */
 body:has(#initial-loading-overlay:not([style*="display: none"])) {
     overflow: hidden;
 }
@@ -254,13 +254,13 @@ body:has(#initial-loading-overlay:not([style*="display: none"])) {
 
 /* --- Стили для сортировки приложений --- */
 #sort-my-apps-btn.active {
-    background-color: #8b5cf6; /* purple-500 */
+    background-color: #f0f9ff; 
     color: white;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .dark #sort-my-apps-btn.active {
-    background-color: #a78bfa; /* purple-400 */
+    background-color: #1e293b; 
     color: #1f2937;
 }
 
